Fixed scrollbar appearing

--- a/Etch-a-Sketch.css
+++ b/Etch-a-Sketch.css
@@ -1,7 +1,7 @@
 .cont{
   position:absolute;
-  top:0;
-  left:0;
+  top:-5px;
+  left:-5px;
   width:100%;
   height:100%;
 }
